# PyProbe

./: LICENSE  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CPYTHON_MEMORY.md  INDEX.md  ROADMAP.md  SAFETY_MODEL.md
examples/: complex_graph.py
src/pyprobe/: __init__.py  core.py  memory.py
src/pyprobe.egg-info/: PKG-INFO  SOURCES.txt
src/pyprobe/core/: __init__.py
src/pyprobe/core/pointer/: __init__.py  engine.py
src/pyprobe/raw/: __init__.py
src/pyprobe/raw/headers/: __init__.py  py_collections.py  py_dict.py  py_float.py  py_list.py  py_long.py  py_object.py  py_tuple.py  py_type.py  py_unicode.py
src/pyprobe/raw/lenses/: __init__.py  bytes_lens.py  dict_lens.py  float_lens.py  int_lens.py  list_lens.py  set_lens.py  str_lens.py  tuple_lens.py
tests/: audit_dicts.py  audit_object.py  check_ids.py  check_nentries.py  check_offsets.py  check_tag.py  debug_case2.py  debug_crash.py  deep_dive_dict.py  discover_general.py  discover_stride.py  inspect_bytes.py  inspect_mem.py  inspect_tuple.py  run_all.py  test_collections.py  test_extended_types.py  test_graphs.py  test_industrial.py  test_lenses.py  test_primitives.py  test_safety.py
tools/: explorer_repl.py  leak_tracker.py
