[project]
name = "pyprobe"
version = "0.1.0"
description = "Research-grade toolkit for CPython memory introspection and controlled manipulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = {text = "MIT"}
authors = [
    {name = "PyProbe Contributors"}
]
keywords = [
    "cpython",
    "memory",
    "introspection",
    "debugging",
    "ctypes",
    "low-level",
    "research"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Documentation = "https://github.com/OWNER/PyProbe/tree/main/docs"
Repository = "https://github.com/OWNER/PyProbe"
Issues = "https://github.com/OWNER/PyProbe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyprobe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
